# microservice-python

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
docker/: docker-compose-mongo.yml
products/: Chart.yaml
products/templates/: deployment.yaml  mongodb-deployment.yaml  mongodb-service.yaml  products-service.yaml  webhookrelay_cr.yaml
src/: main.py
src/database/: ProductDAO.py  ProductDB.py  database.py  settings.py  utils.py
src/entities/: Product.py
src/execution/: product_handle.py
src/grpc_suppliers/: grpc_suppliers.py  settings.py
src/presentation/: product_controller.py  router.py
src/protos/: suppliers_pb2.py  suppliers_pb2_grpc.py
src/validations/: validator.py
