[tool.poetry]
name = "Product"
version = "0.1.0"
description = ""
authors = ["leonardo.silva <leonardo.silva@hbsis.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"
pymongo = "^3.10.1"
umongo = "^2.2.0"
python-decouple = "^3.3"
cerberus = "^1.3.2"
grpcio = "^1.30.0"
grpcio-tools = "^1.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
